--- a/src/components/EmailWidget.astro
+++ b/src/components/EmailWidget.astro
@@ -5,7 +5,7 @@ import EmailSignup from "./EmailSignup.astro";
 <div class="grid gap-8">
   <h4>Newsletter</h4>
   <div class="email-signup-wrapper">
-    <p class="text-xl">
+    <p class="text-xl mb-4">
       Get early previews of some of my posts and book content.
     </p>
     <EmailSignup />
