--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,52 @@
-<footer class="bg-black text-white py-10">
-  <div class="outer-container">
+---
+import { books } from "../pages/books.astro";
+---
 
-    <p id="copyright" class="text-lg opacity-50"></p>
+<footer class="bg-black text-white py-20">
+  <div class="outer-container">
+    <div class="grid md:grid-cols-[3fr_2fr_1fr] gap-20 mb-8">
+      <div>
+        <h4 class="text-xl mb-4">Joshua Ryan Butler</h4>
+        <p class="opacity-50 text-xl">
+          Thanks for visiting my website. If you are are interested in having me
+          come speak (in person or on a podcast) or write, please don’t hesitate
+          to reach out. You can contact me here here.
+        </p>
+      </div>
+      <div>
+        <h4 class="text-xl mb-4">Books:</h4>
+        <ul class="grid gap-4 text-xl opacity-50">
+          {
+            books.map((book) => {
+              return (
+                <li>
+                  <a href={`/books#${book.id}`}>{book.title}</a>
+                </li>
+              );
+            })
+          }
+        </ul>
+      </div>
+      <div>
+        <h4 class="text-xl mb-4">Links:</h4>
+        <ul class="grid gap-4 text-xl opacity-50">
+          <li>
+            <a href="https://twitter.com/butlerjosh" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/joshuabutlerphx" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <a href="mailto:joshbutler@redemptionaz.com">Email</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <p id="copyright" class="text-xl opacity-50"></p>
   </div>
 </footer>
-<style>
-
-</style>
+<style></style>
 
 <script is:inline>
   let d = new Date();
@@ -16,3 +56,9 @@
     el.innerHTML = "© Josh Butler " + n + " - All Rights Reserved";
   }
 </script>
+
+<style>
+  a {
+    @apply underline;
+  }
+</style>
