Fix weird style issue

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,7 +1,7 @@
 <nav
   class="flex justify-between p-10 w-full mx-auto gap-4 relative fade-in fast"
 >
-  <a href="/">Joshua Ryan Butler</a>
+  <a class="logo" href="/">Joshua Ryan Butler</a>
   <div class="hidden md:flex flex-end md:gap-8 flex-col md:flex-row">
     <a class="nav-link" href="/about">About</a>
     <a class="nav-link" href="/books">Books</a>
@@ -26,7 +26,7 @@
     font-weight: bold;
   }
 
-  nav > a {
+  .logo {
     font-family: "Rubik", sans-serif;
     font-weight: bold;
   }
