--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -23,7 +23,10 @@
 <style>
   nav {
     font-size: 1.25rem;
-    font-weight: bold;
+  }
+
+  .nav-link {
+    @apply font-bold font-sans;
   }
 
   .logo {
