--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ import { books } from "../pages/books.astro";
         <p class="opacity-50 text-xl">
           Thanks for visiting my website. If you are are interested in having me
           come speak (in person or on a podcast) or write, please don’t hesitate
-          to reach out. You can contact me here here.
+          to reach out. You can contact me <a href="/speaking#contact">here</a>.
         </p>
       </div>
       <div>
