--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -21,7 +21,8 @@ export const books = [
     postImage: "/images/beautiful-union-study-guide-bg.jpg",
     featuredImage: "/images/beautiful-union-study-guide.jpg",
     title: "Beautiful Union (Study Guide)",
-    description: "",
+    description:
+      "Designed as a companion to that life-changing book, this dynamic study guide is your road map for diving more deeply into the key concepts of Beautiful Union--whether by yourself or with a group.",
   },
   {
     id: "the-persuing-god",
@@ -29,7 +30,7 @@ export const books = [
     postImage: "/images/the-persuing-god-bg.jpg",
     featuredImage: "/images/the-pursuing-god.jpg",
     title: "The Pursuing God",
-    description: "",
+    description: `Is God lost? Many of us feel that way. It's as if God's gone missing, out in the universe somewhere--and we must pick up the hunt, following any trail of breadcrumbs to go find him. We speak of "searching for God,""exploring spirituality," and "finding faith." But what if we have it backward and God is the one pursuing us?What if our job is not to go find God, but to stop running and hiding?Not to discover the light, but step out of the shadows? Not to earnGod's love, but simply receive it? Jesus reveals a God who comes after us, who is on the prowl, hunting down his world for reconciliation. And the question we're left withis not whether we've been good enough, jumped high enough, or sought hard enough... The question is: "Do we want to be found?"`,
   },
   {
     id: "the-skeletons-in-gods-closet",
@@ -37,8 +38,11 @@ export const books = [
     postImage: "/images/the-skeletons-in-gods-closet-bg.jpg",
     featuredImage: "/images/the-skeletons-in-gods-closet.jpg",
     title: "The Skeletons in God's Closet",
-    description:
-      "It's time to better understand God’s redemptive vision for humanity's greatest obsession. In this bold book, award-winning author Joshua Ryan Butler helps listeners rediscover the beauty of the traditional Christian theology of sex by framing it within the greater things it is designed to point to.",
+    description: `Is God a sadistic torturer? Coldhearted judge? Genocidal maniac? Unfortunately, our popular caricatures often make him out to be. There are some questions no Christian wants to be asked. Many today believe hell, judgment and holy war are "skeletons in God's closet," tough topics that, if looked at closely, would reveal a cruel, vindictive tyrant rather than a good and loving God. And we aren't comfortable with the answers we've been given.
+-"How can a loving God send people to Hell?"
+-"Isn't it arrogant to believe Jesus is the only way to God?"
+-"Why is there so much violence in the Old Testament?"
+In this book, we'll pull these bones out into the open to exchange popular caricatures for the beauty and power of the real thing. We'll discover these topics were never really skeletons at all... but proclamations of a God who is good "in his very bones," not just in what he does, but in who he is. We'll fling the wide the closet door and sing loudly, boldly and clearly: God is good and coming to redeem his world. `,
   },
 ];
 ---
