--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -9,7 +9,7 @@
     <a class="nav-link" href="/blog">Blog</a>
   </div>
   <div class="relative md:hidden">
-    <label for="menu" class="font-sans text-base">＋ Menu</label>
+    <label for="menu" class="font-sans text-base">Menu</label>
     <input name="menu" id="menu" type="checkbox" class="hidden" />
     <div class="hidden flex-col gap-4 mobile-menu fixed bg-[var(--bg-alt)] w-full left-0 p-8">
       <a class="nav-link" href="/about">About</a>
@@ -23,6 +23,16 @@
 <style>
   nav {
     font-size: 1.25rem;
+    @apply relative bg-[var(--bg-alt)];
+    z-index: 3;
+  }
+
+  label:has(+ input:checked):before {
+    content: "－";
+  }
+
+  label:before {
+    content: "＋";
   }
 
   .nav-link {
@@ -42,6 +52,15 @@
 
   input:checked ~ .mobile-menu {
     display: flex;
+  }
+
+  @keyframes slide-down {
+    0% {
+      transform: translateY(-10%);
+    }
+    100% {
+      transform: translateY(0);
+    }
   }
 </style>
 
