--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,22 +1,11 @@
 <h4 id="contact" class="text-2xl">Contact</h4>
-<form class="grid gap-4" method="post" action="/api/contact">
-  <input
-    required
-    name="email"
-    type="email"
-    placeholder="Enter your email address"
-    class="appearance-none border-b border-black bg-[rgba(0,0,0,.02)] px-4 py-2 text-base outline-none w-full"
-  />
-  <textarea
-    required
-    name="message"
-    placeholder="Brief Message"
-    rows={4}
-    class="appearance-none border-b border-black bg-[rgba(0,0,0,.02)] px-4 py-2 text-base outline-none w-full"
-  ></textarea>
-  <button
-    type="submit"
-    class="bg-black text-white px-4 py-2 text-base font-semibold w-full"
-    >Submit</button
+<p>
+  The best way to get in touch with me is to send me an email at
+  <a
+    href={`mailto:joshbutler@redemptionaz.com?subject=${encodeURIComponent(
+      "Speaking Engagement / Website Contact"
+    )}`}
   >
-</form>
+    joshbutler@redemptionaz.com
+  </a>
+</p>
