--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -22,7 +22,7 @@
   </div>
   <figure class="self-center p-0 m-0 order-1 md:order-2">
     <img
-      class="w-full h-auto md:max-w-[400px]"
+      class="w-full h-auto md:max-w-[400px] rounded-xl"
       src="/images/josh.jpg"
       alt="Josh Butler"
     />
@@ -30,6 +30,6 @@
 </section>
 <style>
   figure img {
-    box-shadow: 16px 16px 0px 0px var(--gold);
+    box-shadow: 0px 0px 32px 0px rgb(0, 0, 0, .15);
   }
 </style>
