Test static rendering

--- a/src/components/BioWidget.astro
+++ b/src/components/BioWidget.astro
@@ -1,8 +1,8 @@
 <div>
   <h4 class="mb-8">Let's Connect</h4>
-  <figure class="dot-bg p-6">
+  <figure class="p-0">
     <img
-      class="w-full h-auto"
+      class="w-full h-auto rounded-lg"
       src="/images/josh.jpg"
       alt="Josh Butler"
     />
