--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -141,6 +141,12 @@ const { title, description, slug } = Astro.props;
     font-weight: bold;
   }
 
+  iframe {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+  }
+
   .outer-container {
     @apply mx-auto w-full max-w-[1120px] px-8;
   }
