--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -5,6 +5,8 @@ import TableOfContents from "../components/TableOfContents.astro";
 import Page from "../layouts/Page.astro";
 const title = "Books";
 
+export const prerender = true;
+
 export const books = [
   {
     id: "beautiful-union",
