--- a/src/components/EmailSignup.astro
+++ b/src/components/EmailSignup.astro
@@ -1,58 +1,41 @@
-<!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-  <form
-    action="https://joshuaryanbutler.us9.list-manage.com/subscribe/post?u=7bb682fe2e56bf321e3d96925&id=0a3dcfa066&f_id=00bc0de1f0"
-    method="post"
-    id="mc-embedded-subscribe-form"
-    name="mc-embedded-subscribe-form"
-    class="validate"
-    target="_self"
-  >
-    <div id="mc_embed_signup_scroll" class="relative flex items-center">
-      <div class="mc-field-group w-full">
-        <input
-          type="email"
-          value=""
-          name="EMAIL"
-          placeholder="Enter your Email Address"
-          class="required email appearance-none border-b border-black bg-[rgba(0,0,0,.02)] px-4 py-2 text-base outline-none w-full"
-          id="mce-EMAIL"
-          required
-        />
-        <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-      </div>
-      <div id="mce-responses" class="clear">
-        <div class="response" id="mce-error-response" style="display:none">
-        </div>
-        <div class="response" id="mce-success-response" style="display:none">
-        </div>
-      </div>
-      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true">
-        <input
-          type="text"
-          name="b_7bb682fe2e56bf321e3d96925_0a3dcfa066"
-          tabindex="-1"
-          value=""
-        />
-      </div>
-      <div class="clear absolute right-2">
-        <button
-          type="submit"
-          value="Subscribe"
-          name="subscribe"
-          id="mc-embedded-subscribe"
-          class="button grid gap-4 place-items-center text-xl font-body"
-        >
-          <span
-            class="w-[32px] h-[32px] rounded-full border border-black flex items-center justify-center -rotate-90"
-          >
-            <img width="12px" height="12px" src="/images/down-arrow.svg" />
-          </span>
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
+---
+import Input from './Input.astro';
+---
 
-<!--End mc_embed_signup-->
+<form class="relative flex items-center" action="/api/email-signup" method="POST">
+  <Input
+    type="email"
+    name="email"
+    placeholder="Enter your email address"
+    required
+  />
+  <div class="absolute right-2">
+    <button
+      type="submit"
+      class="grid gap-4 place-items-center text-xl font-body"
+    >
+      <span
+        class="w-[32px] h-[32px] rounded-full border border-black flex items-center justify-center -rotate-90"
+      >
+        <img width="12px" height="12px" src="/images/down-arrow.svg" />
+      </span>
+    </button>
+  </div>
+</form>
+<script is:inline>
+  function cookieExists(name) {
+    const cookies = document.cookie;
+    const cookieArray = cookies.split(";");
+    return cookieArray.some((cookie) => cookie.trim().startsWith(`${name}=`));
+  }
+  if (cookieExists("emailsignupstatus")) {
+    let form = document.querySelector(".email-signup-wrapper");
+    let parent = form.parentNode;
+    let el = document.createElement("p");
+    el.classList.add("text-xl", "font-body");
+    el.innerText = "Thanks for signing up! 🎉";
+    parent.appendChild(el)
+    parent.removeChild(form);
+  }
+</script>
+
