Get api routes working

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,8 +1,8 @@
 <div
-  class="bg-[#000958] text-white py-2 px-4 text-sm md:text-[16px] text-center relative"
+  class="bg-[#000958] text-white py-2 px-4 text-sm text-center relative font-sans"
 >
-  <a href="/books#beatiful-union" class="underline font-[600] banner-link">
-    Introducing: <b class="font-bold">Beautiful Union</b><span
+  <a href="/books#beatiful-union" class="underline banner-link">
+    Introducing <b class="font-bold">Beautiful Union</b><span
       class="hidden lg:inline"
     >
       - How God’s vision for sex points us to the good, unlocks the true, and
