--- a/src/components/PostLinks.astro
+++ b/src/components/PostLinks.astro
@@ -26,7 +26,7 @@ const { posts } = Astro.props;
             >
               {new Date(date).toLocaleDateString("en-US")}
             </time>
-            <a href={`/${slug}`}>
+            <a href={`/blog/${slug}`}>
               {title}
             </a>
           </li>
