--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,12 +20,12 @@ const { title, description, slug } = Astro.props;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&family=Rubik:wght@700"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;700&display=swap"
+      rel="preload"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&family=Rubik:wght@700"
-      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;700&display=swap"
+      rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
 
