--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -1,8 +1,8 @@
 ---
-import EmailWidget from "../components/EmailWidget.astro";
-import RecentPosts from "../components/RecentPosts.astro";
-import Page from "../layouts/Page.astro";
-import { getPosts } from "../utils/getPosts";
+import EmailWidget from "../../components/EmailWidget.astro";
+import RecentPosts from "../../components/RecentPosts.astro";
+import Page from "../../layouts/Page.astro";
+import { getPosts } from "../../utils/getPosts";
 export const prerender = true;
 
 export const getStaticPaths = async () => {
