--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -16,6 +16,44 @@ export const books = [
     title: "Beautiful Union",
     description:
       "It's time to better understand God’s redemptive vision for humanity's greatest obsession. In this bold book, award-winning author Joshua Ryan Butler helps listeners rediscover the beauty of the traditional Christian theology of sex by framing it within the greater things it is designed to point to.",
+    options: [
+      {
+        store: "Amazon",
+        url: "https://www.amazon.com/gp/product/B0B7L3ZS9G?tag=randohouseinc11082-20",
+      },
+      {
+        store: "Barnes & Noble",
+        url: "https://www.barnesandnoble.com/w/beautiful-union-joshua-ryan-butler/1141877036;jsessionid=68E62AB0586B46B43994D7A5DA6F55A1.prodny_store01-atgap14?ean=9780593445037&st=AFF&2sid=Random%20House%20Inc_8373827_NA&sourceId=AFFRandom%20House%20Inc",
+      },
+      {
+        store: "Target",
+        url: "https://www.target.com/p/beautiful-union-by-joshua-ryan-butler-paperback/-/A-88062628#lnk=sametab",
+      },
+      {
+        store: "Walmart",
+        url: "https://www.walmart.com/ip/Beautiful-Union-How-God-s-Vision-for-Sex-Points-Us-to-the-Good-Unlocks-the-True-and-Sort-Of-Explains-Everything-Paperback-9780593445037/1212745299",
+      },
+      {
+        store: "Books-A-Million",
+        url: "https://www.booksamillion.com/p/9780593445037?AID=10747236&PID=8373827&SID=PRH38424DF6D6--9780593445037&cjevent=9a1d0dc367a111ed821500210a82b838&cjdata=MXxOfDB8WXww",
+      },
+      {
+        store: "Christian Book",
+        url: "https://www.christianbook.com/beautiful-vision-points-unlocks-explains-everything/joshua-butler/9780593445037/pd/3445037?product_redirect=1&Ntt=9780593445037&item_code=&Ntk=keywords&event=ESRCN|M",
+      },
+      {
+        store: "Cokesbury",
+        url: "https://www.cokesbury.com/9780593445037-Beautiful-Union",
+      },
+      {
+        store: "Cokesbury",
+        url: "https://www.cokesbury.com/9780593445037-Beautiful-Union",
+      },
+      {
+        store: "Indiebound",
+        url: "https://www.indiebound.org/book/9780593445037?aff=penguinrandom",
+      },
+    ],
   },
   {
     id: "beautiful-union-study-guide",
@@ -25,6 +63,44 @@ export const books = [
     title: "Beautiful Union (Study Guide)",
     description:
       "Designed as a companion to that life-changing book, this dynamic study guide is your road map for diving more deeply into the key concepts of Beautiful Union--whether by yourself or with a group.",
+    options: [
+      {
+        store: "Amazon",
+        url: "https://www.amazon.com/gp/product/0593445058?tag=randohouseinc11082-20",
+      },
+      {
+        store: "Barnes & Noble",
+        url: "https://www.barnesandnoble.com/w/beautiful-union-study-guide-joshua-ryan-butler/1141877029?ean=9780593445051&st=AFF&2sid=Random%20House%20Inc_8373827_NA&sourceId=AFFRandom%20House%20Inc",
+      },
+      {
+        store: "Target",
+        url: "https://www.target.com/p/beautiful-union-study-guide-by-joshua-ryan-butler-paperback/-/A-87350753#lnk=sametab",
+      },
+      {
+        store: "Walmart",
+        url: "https://www.walmart.com/ip/Beautiful-Union-Study-Guide-A-Practical-Companion-Deep-Reflection-Good-Conversation-Tough-Questions-You-Really-Want-Ask-But-Haven-t-Yet-Paperback-9780593445051/1025618479",
+      },
+      {
+        store: "Books-A-Million",
+        url: "https://www.booksamillion.com/p/9780593445051?AID=10747236&PID=8373827&SID=PRH38424DF6D6--9780593445051&cjevent=5f59b19b67a211ed831200220a82b820&cjdata=MXxOfDB8WXww",
+      },
+      {
+        store: "Christian Book",
+        url: "https://www.christianbook.com/beautiful-practical-companion-reflection-conversation-questions/joshua-butler/9780593445051/pd/3445051?product_redirect=1&Ntt=9780593445051&item_code=&Ntk=keywords&event=ESRCN%7CM",
+      },
+      {
+        store: "Cokesbury",
+        url: "https://www.cokesbury.com/9780593445051-Beautiful-Union-Study-Guide",
+      },
+      {
+        store: "Cokesbury",
+        url: "https://www.cokesbury.com/9780593445037-Beautiful-Union",
+      },
+      {
+        store: "Indiebound",
+        url: "https://www.indiebound.org/book/9780593445051?aff=penguinrandom",
+      },
+    ],
   },
   {
     id: "the-persuing-god",
@@ -33,6 +109,7 @@ export const books = [
     featuredImage: "/images/the-pursuing-god.jpg",
     title: "The Pursuing God",
     description: `Is God lost? Many of us feel that way. It's as if God's gone missing, out in the universe somewhere--and we must pick up the hunt, following any trail of breadcrumbs to go find him. We speak of "searching for God,""exploring spirituality," and "finding faith." But what if we have it backward and God is the one pursuing us?What if our job is not to go find God, but to stop running and hiding?Not to discover the light, but step out of the shadows? Not to earnGod's love, but simply receive it? Jesus reveals a God who comes after us, who is on the prowl, hunting down his world for reconciliation. And the question we're left withis not whether we've been good enough, jumped high enough, or sought hard enough... The question is: "Do we want to be found?"`,
+    options: [],
   },
   {
     id: "the-skeletons-in-gods-closet",
@@ -45,6 +122,7 @@ export const books = [
 -"Isn't it arrogant to believe Jesus is the only way to God?"
 -"Why is there so much violence in the Old Testament?"
 In this book, we'll pull these bones out into the open to exchange popular caricatures for the beauty and power of the real thing. We'll discover these topics were never really skeletons at all... but proclamations of a God who is good "in his very bones," not just in what he does, but in who he is. We'll fling the wide the closet door and sing loudly, boldly and clearly: God is good and coming to redeem his world. `,
+    options: [],
   },
 ];
 ---
