--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -93,7 +93,7 @@ const { title, description, slug } = Astro.props;
 
   h1 {
     font-family: "Rubik", sans-serif;
-    font-weight: 700;
+    font-weight: 700 !important;
     font-size: 2.5rem;
     line-height: 1.2;
     margin: 0;
@@ -101,7 +101,7 @@ const { title, description, slug } = Astro.props;
 
   h2 {
     font-family: "Rubik", sans-serif;
-    font-weight: 700;
+    font-weight: 700 !important;
     font-size: 2rem;
     line-height: 1.2;
     margin: 0;
@@ -117,7 +117,7 @@ const { title, description, slug } = Astro.props;
 
   h4 {
     font-family: "Rubik", sans-serif;
-    font-weight: 700;
+    font-weight: 700 !important;
     font-size: 1.5rem;
     line-height: 1.2;
     margin: 0;
