--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 <div
-  class="bg-[#000958] text-white py-2 px-4 text-sm text-center relative font-sans"
+  class="bg-[#000958] text-white py-4 px-4 text-sm text-center font-sans sticky top-0 z-10"
 >
   <a href="/books#beatiful-union" class="underline banner-link">
     Introducing <b class="font-bold">Beautiful Union</b><span
