--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -95,15 +95,6 @@ export const books = [
     ],
   },
   {
-    id: "the-persuing-god",
-    date: "2016",
-    postImage: "/images/the-persuing-god-bg.jpg",
-    featuredImage: "/images/the-pursuing-god.jpg",
-    title: "The Pursuing God",
-    description: `Is God lost? Many of us feel that way. It's as if God's gone missing, out in the universe somewhere--and we must pick up the hunt, following any trail of breadcrumbs to go find him. We speak of "searching for God,""exploring spirituality," and "finding faith." But what if we have it backward and God is the one pursuing us?What if our job is not to go find God, but to stop running and hiding?Not to discover the light, but step out of the shadows? Not to earnGod's love, but simply receive it? Jesus reveals a God who comes after us, who is on the prowl, hunting down his world for reconciliation. And the question we're left withis not whether we've been good enough, jumped high enough, or sought hard enough... The question is: "Do we want to be found?"`,
-    options: [],
-  },
-  {
     id: "the-skeletons-in-gods-closet",
     date: "2015",
     postImage: "/images/the-skeletons-in-gods-closet-bg.jpg",
@@ -114,7 +105,42 @@ export const books = [
 -"Isn't it arrogant to believe Jesus is the only way to God?"
 -"Why is there so much violence in the Old Testament?"
 In this book, we'll pull these bones out into the open to exchange popular caricatures for the beauty and power of the real thing. We'll discover these topics were never really skeletons at all... but proclamations of a God who is good "in his very bones," not just in what he does, but in who he is. We'll fling the wide the closet door and sing loudly, boldly and clearly: God is good and coming to redeem his world. `,
-    options: [],
+    options: [
+      {
+        store: "Amazon",
+        url: "https://www.amazon.com/Skeletons-Gods-Closet-Surprise-Judgment/dp/0529100819",
+      },
+      {
+        store: "Barnes & Noble",
+        url: "https://www.barnesandnoble.com/w/the-skeletons-in-gods-closet-joshua-ryan-butler/1119060530?ean=9780529100818",
+      },
+      {
+        store: "Christian Book",
+        url: "https://www.christianbook.com/skeletons-closet-mercy-surprise-judgment-holy/joshua-butler/9780529100818/pd/9100818",
+      },
+    ],
+  },
+  {
+    id: "the-persuing-god",
+    date: "2016",
+    postImage: "/images/the-persuing-god-bg.jpg",
+    featuredImage: "/images/the-pursuing-god.jpg",
+    title: "The Pursuing God",
+    description: `Is God lost? Many of us feel that way. It's as if God's gone missing, out in the universe somewhere--and we must pick up the hunt, following any trail of breadcrumbs to go find him. We speak of "searching for God,""exploring spirituality," and "finding faith." But what if we have it backward and God is the one pursuing us?What if our job is not to go find God, but to stop running and hiding?Not to discover the light, but step out of the shadows? Not to earnGod's love, but simply receive it? Jesus reveals a God who comes after us, who is on the prowl, hunting down his world for reconciliation. And the question we're left withis not whether we've been good enough, jumped high enough, or sought hard enough... The question is: "Do we want to be found?"`,
+    options: [
+    {
+        store: "Amazon",
+        url: "https://www.amazon.com/Pursuing-God-Reckless-Irrational-Obsessed/dp/0718021606",
+      },
+      {
+        store: "Barnes & Noble",
+        url: "https://www.barnesandnoble.com/w/the-pursuing-god-joshua-ryan-butler/1122252442",
+      },
+      {
+        store: "Christian Book",
+        url: "https://www.christianbook.com/pursuing-reckless-irrational-obsessed-dying-bring/joshua-butler/9780718021603/pd/021603",
+      },
+    ],
   },
 ];
 ---
