--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -11,7 +11,7 @@
       to help people who wrestle with tough topics of the Christian faith by confronting
       popular caricatures and replacing them with the real thing.
     </p>
-    <a href="#latest-work" class="flex gap-4 items-center text-xl font-body">
+    <a href="#latest-work" class="flex gap-4 items-center text-xl font-body hover:opacity-70 transition-all">
       <span
         class="w-[48px] h-[48px] rounded-full border border-[var(--black)] flex items-center justify-center"
       >
@@ -29,7 +29,7 @@
   </figure>
 </section>
 <style>
-  figure img {
+  /* figure img {
     box-shadow: 0px 0px 32px 0px rgb(0, 0, 0, .15);
-  }
+  } */
 </style>
