--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -11,7 +11,7 @@
   <div class="relative md:hidden">
     <label for="menu" class="font-sans text-base">Menu</label>
     <input name="menu" id="menu" type="checkbox" class="hidden" />
-    <div class="hidden flex-col gap-4 mobile-menu fixed bg-[var(--bg-alt)] w-full left-0 p-8">
+    <div class="hidden flex-col gap-4 mobile-menu fixed w-full left-0 p-8">
       <a class="nav-link" href="/about">About</a>
       <a class="nav-link" href="/books">Books</a>
       <a class="nav-link" href="/speaking">Speaking</a>
@@ -23,7 +23,7 @@
 <style>
   nav {
     font-size: 1.25rem;
-    @apply relative bg-[var(--bg-alt)];
+    @apply relative;
     z-index: 3;
   }
 
