--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,7 +57,7 @@ const { title, description, slug } = Astro.props;
   </head>
   <body class="text-2xl">
     <Banner />
-    <header class="bg-[var(--bg-alt)]">
+    <header>
       <NavBar />
       <div class="outer-container fade-in">
         <slot name="header" />
@@ -71,7 +71,7 @@ const { title, description, slug } = Astro.props;
 </html>
 <style is:global>
   :root {
-    --bg-alt: #faf6ef;
+    --bg-alt: #F7F0E3;
     --bg-main: #fff;
     --bg-light-purple: #f2f3fc;
     --bg-dark: #000;
@@ -79,7 +79,7 @@ const { title, description, slug } = Astro.props;
     --text-gray: #333333;
     --text-default: #000;
     --gold: rgb(209, 161, 95);
-    --light-blue: #f2f3fc;
+    --light-blue: #EBEDFF;
   }
 
   html {
