--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -11,7 +11,7 @@
   <div class="relative md:hidden">
     <label for="menu" class="font-sans text-base">Menu</label>
     <input name="menu" id="menu" type="checkbox" class="hidden" />
-    <div class="hidden flex-col gap-4 mobile-menu fixed w-full left-0 p-8 bg-white">
+    <div class="hidden flex-col gap-4 mobile-menu fixed w-full left-0 p-8 bg-[#f6f6f6]">
       <a class="nav-link" href="/about">About</a>
       <a class="nav-link" href="/books">Books</a>
       <a class="nav-link" href="/speaking">Speaking</a>
