--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -41,7 +41,7 @@ const testimonials = [
     </p>
   </header>
   <div class="overflow-auto py-8">
-    <ul class="px-8 inline-flex gap-8 items-center">
+    <ul class="px-8 inline-flex w-full justify-center items-center gap-8">
       {
         testimonials.map((tesimonial, i) => {
           return (
