--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -6,8 +6,7 @@
         class="underline"
         href="https://tempe.redemptionaz.com"
         target="_blank">Redemption Tempe</a
-      > in Arizona, the author of Beautiful Union (and a few other books), and a
-      fellow with The Keller Center for Cultural Apologetics. I love shifting paradigms,
+      > in Arizona, the author of Beautiful Union (and a few other books). I love shifting paradigms,
       to help people who wrestle with tough topics of the Christian faith by confronting
       popular caricatures and replacing them with the real thing.
     </p>
