--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -1,5 +1,5 @@
 ---
-import EmailSignup from "./EmailSignup.astro";
+import EmailSignup from "./InlineEmailSignup.astro";
 ---
 
 <div class="mt-20">
@@ -17,7 +17,7 @@ import EmailSignup from "./EmailSignup.astro";
       </div>
       <div class="grid mt-6 email-signup-wrapper">
         <p class="text-lg mb-4">Download <b>Chapter 1</b> for free</p>
-        <EmailSignup />
+        <EmailSignup downloadIntent />
       </div>
     </div>
     <figure>
