Fix banner styles

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,5 +1,5 @@
 <div
-  class="banner bg-[#000958] text-white fixed bottom-2 right-2 z-10 w-full max-w-[400px] p-8 rounded-xl grid grid-cols-[auto_1fr] gap-6"
+  class="banner bg-[#000958] text-white fixed bottom-2 right-2 z-10 w-[95vw] max-w-[400px] p-8 rounded-xl grid grid-cols-[auto_1fr] gap-6"
 >
   <figure>
     <img width="120px" src="/images/beautiful-union.jpg" />
