--- a/src/pages/speaking.astro
+++ b/src/pages/speaking.astro
@@ -15,7 +15,7 @@ export const prerender = true;
     I love to help people encounter Christ in a fresh way. Please feel free to
     check out some recent sample messages and let me know if I can help explore
     crafting a message that’s the right fit for your event, by contacting me at:
-    joshbutler@redemptionaz.com.
+    joshua.butler@gmail.com.
   </p>
 
   <h4>Sample Speaking Messages</h4>
