--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -2,10 +2,10 @@
 <p>
   The best way to get in touch with me is to send me an email at
   <a
-    href={`mailto:joshbutler@redemptionaz.com?subject=${encodeURIComponent(
+    href={`mailto:joshua.butler@gmail.com?subject=${encodeURIComponent(
       "Speaking Engagement / Website Contact"
     )}`}
   >
-    joshbutler@redemptionaz.com
+    joshua.butler@gmail.com
   </a>
 </p>
