use the inline email signup

--- a/src/components/EmailWidget.astro
+++ b/src/components/EmailWidget.astro
@@ -1,5 +1,5 @@
 ---
-import EmailSignup from "./EmailSignup.astro";
+import EmailSignup from "./InlineEmailSignup.astro";
 ---
 
 <div class="grid gap-8">
