--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -2,11 +2,7 @@
   <div class="grid gap-10 order-2 md:order-1">
     <h1>Hi, I'm Josh</h1>
     <p>
-      I’m a pastor of <a
-        class="underline"
-        href="https://tempe.redemptionaz.com"
-        target="_blank">Redemption Tempe</a
-      > in Arizona, the author of Beautiful Union (and a few other books). I love shifting paradigms,
+      I’m the author of Beautiful Union (and a few other books). I love shifting paradigms,
       to help people who wrestle with tough topics of the Christian faith by confronting
       popular caricatures and replacing them with the real thing.
     </p>
