--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -40,8 +40,8 @@ const testimonials = [
       Love for <b class="font-bold">Beautiful Union</b> from leading voices.
     </p>
   </header>
-  <div class="overflow-auto py-8">
-    <ul class="px-8 inline-flex w-full md:justify-center items-center gap-8">
+  <div class="overflow-auto py-8 outer-container">
+    <ul class="grid md:grid-cols-2 gap-12 items-center">
       {
         testimonials.map((tesimonial, i) => {
           return (
